// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class.1 1`] = `Array []`;

exports[`func.1 1`] = `
Array [
  "[Function: foo]",
]
`;

exports[`if.true 1`] = `
Array [
  "pass",
]
`;

exports[`if.true 2`] = `
Array [
  "pass",
]
`;

exports[`simple.1 1`] = `
Array [
  "hi",
]
`;
